# praxlab

./: .gitignore  CLAUDE.md  README.md  clean.sh  lab  rules.md
gepa/: notes.md  optimize.py  program.md  results.tsv  seed.json
pretrain/: campaign.yaml  modal_run.py  notes.md  program.md  run.sh
prime/: campaign.yaml  program.md  results.tsv  run.sh
prime/configs/rl/: tool-routing.toml
prime/environments/tool_routing/: pyproject.toml  tool_routing.py
tinker/rl/: campaign.yaml  program.md  results.tsv  run.sh  train.py
tinker/sl/: campaign.yaml  data.jsonl  eval_accuracy.py  eval_filtered_mv.py  eval_mixed_temp.py  eval_oracle_rerank.py  eval_self_correct.py  eval_weighted_mv.py  gen_claude_traces_verified.py  gen_data.py  gen_hard_distill.py  gen_self_distill.py  gen_targeted_traces.py  notes.md  program.md  results.tsv  run.sh  train.py
