[project]
name = "tool-routing"
description = "Learn optimal tool routing from reward signal. 6 tools (some redundant), model discovers specialization."
tags = ["multi-turn", "tools", "train", "eval"]
version = "0.4.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["tool_routing.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 4
